# Voice-Notion

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile.web  Dockerfile.worker  pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: celery_app.py  dependencies.py  logger.py  rate_limit.py  security.py
backend/app/prompts/: __init__.py  routing.py
backend/app/prompts/templates/: _spec.md  general.md  idea.md  meeting.md  todo.md
backend/app/routes/: voice_note.py
backend/app/schemas/: context.py  voice_note.py
backend/app/services/: audio_validator.py  llm_service.py  notification_service.py  notion_service.py  stt_service.py
backend/app/static/: demo.html
backend/app/utils/: markdown_parser.py
backend/app/worker/: tasks.py
backend/scripts/: smoke_test.py  verify_notion_integration.py
backend/tests/: test_llm_service.py  test_notion_service.py  test_parser.py  test_stt_service.py
docs/: AUDIO_FORMAT_VALIDATION.md  DEMO_GUIDE.md  DEPLOYMENT_GUIDE_ADMIN.md  ENVIRONMENT_VARIABLES.md  PROJECT_REQUIREMENTS.md  PROMPT_TEMPLATES.md  SIRI_INTEGRATION.md  SIRI_INTEGRATION_ADMIN.md  SIRI_INTEGRATION_DEMO.md  TESTING_GUIDE.md
nginx/: nginx.conf
