[tool.poetry]
name = "voice-notion"
version = "0.3.0"
description = "Voice Notion - Voice-to-Notion Automation"
authors = ["YuChieh-Chiu <81817517+YuChieh-Chiu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
celery = {extras = ["redis"], version = "^5.6.1"}
google-genai = "^1.56.0"
line-bot-sdk = "^3.21.0"
notion-client = "^2.7.0"
python-multipart = "^0.0.21"
pydantic-settings = "^2.12.0"
markdown-it-py = "^4.0.0"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.worker.dependencies]
faster-whisper = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

